--- a/src/main/resources/app.yml
+++ b/src/main/resources/app.yml
@@ -1,7 +1,7 @@
 server:
   applicationConnectors:
     - type: http
-      port: 5000
+      port: ${PORT}
   adminConnectors:
     - type: http
       port: 5001
