--- a/src/main/resources/app-prod.properties
+++ b/src/main/resources/app-prod.properties
@@ -1,1 +1,10 @@
 wpUrl = https://elsiegram.com/wp/wp-admin/admin-ajax.php
+siteDomain=elsiegram.com
+siteName=Elsiegram
+
+inviteRequestSubject=New %s Invite Request
+inviteRequestMessage=A new invite has been requested for %s. Approve users at https://%s/admin/invites.
+newUserPasswordResetSubject=%s Registration
+newUserPasswordResetMessage=You have been accepted to %s. Please follow the link to set your password: https://%s/reset-password?token=
+resetPasswordSubject=%s Password Reset
+resetPasswordMessage=You have requested a new password for %s. Please follow this link to reset your password: https://%s/reset-password?token=
