--- a/src/main/resources/app-prod.properties
+++ b/src/main/resources/app-prod.properties
@@ -1,6 +1,7 @@
 wpUrl = https://elsiegram.com/wp/wp-admin/admin-ajax.php
 siteDomain=elsiegram.com
 siteName=Elsiegram
+awsConfig.s3Region=us-west-2
 
 inviteRequestSubject=New %s Invite Request
 inviteRequestMessage=A new invite has been requested for %s. Approve users at https://%s/admin/invites.
