Added tinypng key

--- a/src/main/resources/app-prod.properties
+++ b/src/main/resources/app-prod.properties
@@ -2,6 +2,7 @@ wpUrl = https://elsiegram.com/wp/wp-admin/admin-ajax.php
 siteDomain=elsiegram.com
 siteName=Elsiegram
 awsConfig.s3Region=us-west-2
+tinypngKey=Wx1dl1DZP8XKdRzDD1vNhCZrz9xpnFM7
 
 inviteRequestSubject=New %s Invite Request
 inviteRequestMessage=A new invite has been requested for %s. Approve users at https://%s/admin/invites.
