Added set password language for setting password emails

--- a/src/main/resources/app-prod.properties
+++ b/src/main/resources/app-prod.properties
@@ -8,3 +8,5 @@ newUserPasswordResetSubject=%s Registration
 newUserPasswordResetMessage=You have been accepted to %s. Please follow the link to set your password: https://%s/reset-password?token=
 resetPasswordSubject=%s Password Reset
 resetPasswordMessage=You have requested a new password for %s. Please follow this link to reset your password: https://%s/reset-password?token=
+newUserPasswordSetSubject=%s Registration
+newUserPasswordSetMessage=You have been accepted to %s. Please follow the link to set your password: https://%s/reset-password?token=
