Email copy update

--- a/src/main/resources/app-prod.properties
+++ b/src/main/resources/app-prod.properties
@@ -9,4 +9,4 @@ newUserPasswordResetMessage=You have been accepted to %s. Please follow the link
 resetPasswordSubject=%s Password Reset
 resetPasswordMessage=You have requested a new password for %s. Please follow this link to reset your password: https://%s/reset-password?token=
 newUserPasswordSetSubject=%s Registration
-newUserPasswordSetMessage=You have been accepted to %s. Please follow the link to set your password: https://%s/reset-password?token=
+newUserPasswordSetMessage=You have been accepted to %s. Please follow the link to finish setting up your account: https://%s/reset-password?token=
