Fixed email message formatting for new users

--- a/src/main/resources/app-prod.properties
+++ b/src/main/resources/app-prod.properties
@@ -3,6 +3,6 @@ wpUrl = https://elsiegram.com/wp/wp-admin/admin-ajax.php
 inviteRequestSubject=New %s Invite Request
 inviteRequestMessage=A new invite has been requested for %s. Approve users at https://%s/admin/invites.
 newUserPasswordSetSubject=%s Registration
-newUserPasswordSetMessage=You have been accepted to %s. Please follow the link to set your password: https://%s/reset-password?token=
+newUserPasswordSetMessage=You have been accepted to %s. Please click the link to set your password: https://%s/reset-password?token=%s&set=true&email=%s
 resetPasswordSubject=%s Password Reset
 resetPasswordMessage=You have requested a new password for %s. Please follow this link to reset your password: https://%s/reset-password?token=
