--- a/pom.xml
+++ b/pom.xml
@@ -178,5 +178,10 @@
             <artifactId>emoji-java</artifactId>
             <version>5.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.14.0</version>
+        </dependency>
     </dependencies>
 </project>
