--- a/pom.xml
+++ b/pom.xml
@@ -171,7 +171,7 @@
         <dependency>
             <groupId>com.tinify</groupId>
             <artifactId>tinify</artifactId>
-            <version>RELEASE</version>
+            <version>1.6.4</version>
         </dependency>
         <dependency>
             <groupId>com.vdurmont</groupId>
