Deployment script updated

--- a/.github/workflows/deployElsieGram.yml
+++ b/.github/workflows/deployElsieGram.yml
@@ -9,10 +9,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.0.4
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY-ELSIEGRAM_API}}
-          heroku_app_name: "elsiegram-api"
-          heroku_email: "garrett.estrin@gmail.com"
-          buildpack: "heroku/java"
+    - uses: actions/checkout@v1
+    - name: Push to Heroku
+      run: git push -f https://heroku:${{ secrets.HEROKU_API_KEY_ELSIEGRAM_API }}@git.heroku.com/elsiegram-api.git origin/master:master
