--- a/.github/workflows/deployElsieGram.yml
+++ b/.github/workflows/deployElsieGram.yml
@@ -10,5 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Push to Heroku
-      run: git push -f https://heroku:${{ secrets.HEROKU_API_KEY_ELSIEGRAM_API }}@git.heroku.com/elsiegram-api.git origin/master:master
+    - name: Install Heroku CLI
+      run: brew tap heroku/brew && brew install heroku
+    - name: Login to Heroku Container registry
+      env: 
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY_ELSIEGRAM_API }}
+      run: heroku container:login 
+    - name: Build and push
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY_ELSIEGRAM_API }}
+      run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web 
+    - name: Release
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY_ELSIEGRAM_API }}
+      run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web 
