--- a/.github/workflows/deployElsieGram.yml
+++ b/.github/workflows/deployElsieGram.yml
@@ -12,15 +12,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install Heroku CLI
       run: brew tap heroku/brew && brew install heroku
-    - name: Login to Heroku Container registry
+    - name: Login to Heroku, Set remote branch, push master branch
       env: 
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY_ELSIEGRAM_API }}
-      run: heroku container:login 
-    - name: Add Heroku Remote
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY_ELSIEGRAM_API }}
-      run: heroku git:remote -a elsiegram-api
-    - name: Release
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY_ELSIEGRAM_API }}
-      run: git push heroku HEAD:master
+      run: heroku container:login && heroku git:remote -a elsiegram-api && git push heroku HEAD:master
